packages/dartcv/src/calib3d/calib3d.h

//  Distorts 2D points using fisheye model.
// void cv::fisheye::distortPoints (InputArray undistorted, OutputArray distorted, InputArray K, InputArray D, double alpha=0)
CvStatus *cv_fisheye_distortPoints(
    MatIn undistorted, MatOut distorted, MatIn K, MatIn D, double alpha, CvCallback_0 callback
);
// void cv::fisheye::distortPoints (InputArray undistorted, OutputArray distorted, InputArray Kundistorted, InputArray K, InputArray D, double alpha=0)
CvStatus *cv_fisheye_distortPoints_1(
    MatIn undistorted, MatOut distorted, MatInOut Kundistorted, MatIn K, MatIn D, double alpha, CvCallback_0 callback
);
// Estimates new camera intrinsic matrix for undistortion or rectification.
// void  cv::fisheye::estimateNewCameraMatrixForUndistortRectify (InputArray K, InputArray D, const Size &image_size, InputArray R, OutputArray P, double balance=0.0, const Size &new_size=Size(), double fov_scale=1.0)
CvStatus *cv_fisheye_estimateNewCameraMatrixForUndistortRectify(
    MatIn k,
    MatIn d,
    CvSize imgSize,
    MatIn r,
    MatOut p,
    double balance,
    CvSize newSize,
    double fovScale,
    CvCallback_0 callback
);
//  Computes undistortion and rectification maps for image transform by remap. If D is empty zero distortion is used, if R or P is empty identity matrixes are used.
// void  cv::fisheye::initUndistortRectifyMap (InputArray K, InputArray D, InputArray R, InputArray P, const cv::Size &size, int m1type, OutputArray map1, OutputArray map2)
CvStatus *cv_fisheye_initUndistortRectifyMap(
    MatIn k,
    MatIn d,
    MatIn r,
    MatIn p,
    CvSize imgSize,
    int m1type,
    MatOut map1,
    MatOut map2,
    CvCallback_0 callback
);
//  Projects points using fisheye model.
// void  cv::fisheye::projectPoints (InputArray objectPoints, OutputArray imagePoints, const Affine3d &affine, InputArray K, InputArray D, double alpha=0, OutputArray jacobian=noArray())
// void  cv::fisheye::projectPoints (InputArray objectPoints, OutputArray imagePoints, InputArray rvec, InputArray tvec, InputArray K, InputArray D, double alpha=0, OutputArray jacobian=noArray())
CvStatus *cv_fisheye_projectPoints(
    MatIn objectPoints, MatOut imagePoints, MatIn rvec, MatIn tvec, MatIn k, MatIn d, double alpha, MatOut jacobian,
    CvCallback_0 callback
);
//  Finds an object pose from 3D-2D point correspondences for fisheye camera moodel.
// bool  cv::fisheye::solvePnP (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, OutputArray rvec, OutputArray tvec, bool useExtrinsicGuess=false, int flags=SOLVEPNP_ITERATIVE, TermCriteria criteria=TermCriteria(TermCriteria::MAX_ITER+TermCriteria::EPS, 10, 1e-8))
CvStatus *cv_fisheye_solvePnP(
    MatIn objectPoints, MatIn imagePoints, MatIn cameraMatrix, MatIn distCoeffs, MatOut rvec, MatOut tvec,
    bool useExtrinsicGuess, int flags, TermCriteria criteria, bool *rval, CvCallback_0 callback
);
//  This is an overloaded member function, provided for convenience. It differs from the above function only in what argument(s) it accepts.
// double  cv::fisheye::stereoCalibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints1, InputArrayOfArrays imagePoints2, InputOutputArray K1, InputOutputArray D1, InputOutputArray K2, InputOutputArray D2, Size imageSize, OutputArray R, OutputArray T, int flags=fisheye::CALIB_FIX_INTRINSIC, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 100, DBL_EPSILON))
// CvStatus *cv_fisheye_stereoCalibrate(
//     VecMat objectPoints,
//     VecMat imagePoints1,
//     VecMat imagePoints2,
//     VecMat k1,
//     VecMat d1,
//     VecMat k2,
//     VecMat d2,
//     CvSize imgSize,
//     Mat r,
//     Mat t,
//     CvCallback_0 callback
// );

//  Performs stereo calibration.
// double  cv::fisheye::stereoCalibrate (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints1, InputArrayOfArrays imagePoints2, InputOutputArray K1, InputOutputArray D1, InputOutputArray K2, InputOutputArray D2, Size imageSize, OutputArray R, OutputArray T, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, int flags=fisheye::CALIB_FIX_INTRINSIC, TermCriteria criteria=TermCriteria(TermCriteria::COUNT+TermCriteria::EPS, 100, DBL_EPSILON))
// CvStatus *cv_fisheye_stereoCalibrate_1(
//     VecMat objectPoints,
//     VecMat imagePoints1,
//     VecMat imagePoints2,
//     VecMat k1,
//     VecMat d1,
//     VecMat k2,
//     VecMat d2,
//     CvSize imgSize,
//     Mat r,
//     Mat t,
//     VecMat rvecs,
//     VecMat tvecs,
//     CvCallback_0 callback
// );

//  Stereo rectification for fisheye camera model.
// void  cv::fisheye::stereoRectify (InputArray K1, InputArray D1, InputArray K2, InputArray D2, const Size &imageSize, InputArray R, InputArray tvec, OutputArray R1, OutputArray R2, OutputArray P1, OutputArray P2, OutputArray Q, int flags, const Size &newImageSize=Size(), double balance=0.0, double fov_scale=1.0)
// CvStatus *cv_fisheye_stereoRectify(
//     Mat k1,
//     Mat d1,
//     Mat k2,
//     Mat d2,
//     CvSize imgSize,
//     Mat r,
//     Mat t,
//     Mat r1,
//     Mat r2,
//     Mat p1,
//     Mat p2,
//     Mat q,
//     int flags,
//     CvSize newSize,
//     double balance,
//     double fovScale,
//     CvCallback_0 callback
// );

//  Transforms an image to compensate for fisheye lens distortion.
// void  cv::fisheye::undistortImage (InputArray distorted, OutputArray undistorted, InputArray K, InputArray D, InputArray Knew=cv::noArray(), const Size &new_size=Size())
CvStatus *cv_fisheye_undistortImage(
    Mat distorted, Mat undistorted, Mat k, Mat d, CvCallback_0 callback
);
CvStatus *cv_fisheye_undistortImage_1(
    Mat distorted, Mat undistorted, Mat k, Mat d, Mat knew, CvSize size, CvCallback_0 callback
);
// Undistorts 2D points using fisheye model.
// void  cv::fisheye::undistortPoints (InputArray distorted, OutputArray undistorted, InputArray K, InputArray D, InputArray R=noArray(), InputArray P=noArray(), TermCriteria criteria=TermCriteria(TermCriteria::MAX_ITER+TermCriteria::EPS, 10, 1e-8))
CvStatus *cv_fisheye_undistortPoints(
    Mat distorted, Mat undistorted, Mat k, Mat d, Mat R, Mat P, CvCallback_0 callback
);
// Returns the default new camera matrix.
// Mat cv::getDefaultNewCameraMatrix (InputArray cameraMatrix, Size imgsize=Size(), bool centerPrincipalPoint=false)
CvStatus *cv_getDefaultNewCameraMatrix(
    Mat cameraMatrix,
    CvSize size,
    bool centerPrincipalPoint,
    Mat *rval,
    CvCallback_0 callback
);
// Returns the new camera intrinsic matrix based on the free scaling parameter.
// Mat cv::getOptimalNewCameraMatrix (InputArray cameraMatrix, InputArray distCoeffs, Size imageSize, double alpha, Size newImgSize=Size(), Rect *validPixROI=0, bool centerPrincipalPoint=false)
CvStatus *cv_getOptimalNewCameraMatrix(
    Mat cameraMatrix,
    Mat distCoeffs,
    CvSize size,
    double alpha,
    CvSize newImgSize,
    CvRect *validPixROI,
    bool centerPrincipalPoint,
    Mat *rval,
    CvCallback_0 callback
);
// computes valid disparity ROI from the valid ROIs of the rectified images (that are returned by stereoRectify)
// Rect cv::getValidDisparityROI (Rect roi1, Rect roi2, int minDisparity, int numberOfDisparities, int blockSize)

// Finds an initial camera intrinsic matrix from 3D-2D point correspondences.
// Mat cv::initCameraMatrix2D (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints, Size imageSize, double aspectRatio=1.0)

// Computes the projection and inverse-rectification transformation map. In essense, this is the inverse of initUndistortRectifyMap to accomodate stereo-rectification of projectors ('inverse-cameras') in projector-camera pairs.
// void cv::initInverseRectificationMap (InputArray cameraMatrix, InputArray distCoeffs, InputArray R, InputArray newCameraMatrix, const Size &size, int m1type, OutputArray map1, OutputArray map2)

// Computes the undistortion and rectification transformation map.
// void cv::initUndistortRectifyMap (InputArray cameraMatrix, InputArray distCoeffs, InputArray R, InputArray newCameraMatrix, Size size, int m1type, OutputArray map1, OutputArray map2)
CvStatus *cv_initUndistortRectifyMap(
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat r,
    Mat newCameraMatrix,
    CvSize size,
    int m1type,
    Mat map1,
    Mat map2,
    CvCallback_0 callback
);