packages/dartcv/lib/src/g/calib3d.g.dart


  ffi.Pointer<CvStatus> cv_fisheye_distortPoints(
    imp1.MatIn undistorted,
    imp1.MatOut distorted,
    imp1.MatIn K,
    imp1.MatIn D,
    double alpha,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_distortPoints(
      undistorted,
      distorted,
      K,
      D,
      alpha,
      callback,
    );
  }

  late final _cv_fisheye_distortPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Double,
              imp1.CvCallback_0)>>('cv_fisheye_distortPoints');
  late final _cv_fisheye_distortPoints =
      _cv_fisheye_distortPointsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatIn,
              imp1.MatIn, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_distortPoints_1(
    imp1.MatIn undistorted,
    imp1.MatOut distorted,
    imp1.MatInOut Kundistorted,
    imp1.MatIn K,
    imp1.MatIn D,
    double alpha,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_distortPoints_1(
      undistorted,
      distorted,
      Kundistorted,
      K,
      D,
      alpha,
      callback,
    );
  }

  late final _cv_fisheye_distortPoints_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatInOut,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Double,
              imp1.CvCallback_0)>>('cv_fisheye_distortPoints_1');
  late final _cv_fisheye_distortPoints_1 =
      _cv_fisheye_distortPoints_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatInOut,
              imp1.MatIn, imp1.MatIn, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_estimateNewCameraMatrixForUndistortRectify(
    imp1.MatIn k,
    imp1.MatIn d,
    CvSize imgSize,
    imp1.MatIn r,
    imp1.MatOut p,
    double balance,
    CvSize newSize,
    double fovScale,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_estimateNewCameraMatrixForUndistortRectify(
      k,
      d,
      imgSize,
      r,
      p,
      balance,
      newSize,
      fovScale,
      callback,
    );
  }

  late final _cv_fisheye_estimateNewCameraMatrixForUndistortRectifyPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Pointer<CvStatus> Function(
                      imp1.MatIn,
                      imp1.MatIn,
                      CvSize,
                      imp1.MatIn,
                      imp1.MatOut,
                      ffi.Double,
                      CvSize,
                      ffi.Double,
                      imp1.CvCallback_0)>>(
          'cv_fisheye_estimateNewCameraMatrixForUndistortRectify');
  late final _cv_fisheye_estimateNewCameraMatrixForUndistortRectify =
      _cv_fisheye_estimateNewCameraMatrixForUndistortRectifyPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              imp1.MatIn,
              imp1.MatOut,
              double,
              CvSize,
              double,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_initUndistortRectifyMap(
    imp1.MatIn k,
    imp1.MatIn d,
    imp1.MatIn r,
    imp1.MatIn p,
    CvSize imgSize,
    int m1type,
    imp1.MatOut map1,
    imp1.MatOut map2,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_initUndistortRectifyMap(
      k,
      d,
      r,
      p,
      imgSize,
      m1type,
      map1,
      map2,
      callback,
    );
  }

  late final _cv_fisheye_initUndistortRectifyMapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              ffi.Int,
              imp1.MatOut,
              imp1.MatOut,
              imp1.CvCallback_0)>>('cv_fisheye_initUndistortRectifyMap');
  late final _cv_fisheye_initUndistortRectifyMap =
      _cv_fisheye_initUndistortRectifyMapPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              int,
              imp1.MatOut,
              imp1.MatOut,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_projectPoints(
    imp1.MatIn objectPoints,
    imp1.MatOut imagePoints,
    imp1.MatIn rvec,
    imp1.MatIn tvec,
    imp1.MatIn k,
    imp1.MatIn d,
    double alpha,
    imp1.MatOut jacobian,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_projectPoints(
      objectPoints,
      imagePoints,
      rvec,
      tvec,
      k,
      d,
      alpha,
      jacobian,
      callback,
    );
  }

  late final _cv_fisheye_projectPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Double,
              imp1.MatOut,
              imp1.CvCallback_0)>>('cv_fisheye_projectPoints');
  late final _cv_fisheye_projectPoints =
      _cv_fisheye_projectPointsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              double,
              imp1.MatOut,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_solvePnP(
    imp1.MatIn objectPoints,
    imp1.MatIn imagePoints,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    imp1.MatOut rvec,
    imp1.MatOut tvec,
    bool useExtrinsicGuess,
    int flags,
    TermCriteria criteria,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_solvePnP(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      useExtrinsicGuess,
      flags,
      criteria,
      rval,
      callback,
    );
  }

  late final _cv_fisheye_solvePnPPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Bool,
              ffi.Int,
              TermCriteria,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_fisheye_solvePnP');
  late final _cv_fisheye_solvePnP = _cv_fisheye_solvePnPPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          bool,
          int,
          TermCriteria,
          ffi.Pointer<ffi.Bool>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_undistortImage(
    Mat distorted,
    Mat undistorted,
    Mat k,
    Mat d,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_undistortImage(
      distorted,
      undistorted,
      k,
      d,
      callback,
    );
  }

  late final _cv_fisheye_undistortImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat,
              imp1.CvCallback_0)>>('cv_fisheye_undistortImage');
  late final _cv_fisheye_undistortImage =
      _cv_fisheye_undistortImagePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_undistortImage_1(
    Mat distorted,
    Mat undistorted,
    Mat k,
    Mat d,
    Mat knew,
    CvSize size,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_undistortImage_1(
      distorted,
      undistorted,
      k,
      d,
      knew,
      size,
      callback,
    );
  }

  late final _cv_fisheye_undistortImage_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, CvSize,
              imp1.CvCallback_0)>>('cv_fisheye_undistortImage_1');
  late final _cv_fisheye_undistortImage_1 =
      _cv_fisheye_undistortImage_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, Mat, CvSize, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_fisheye_undistortPoints(
    Mat distorted,
    Mat undistorted,
    Mat k,
    Mat d,
    Mat R,
    Mat P,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_fisheye_undistortPoints(
      distorted,
      undistorted,
      k,
      d,
      R,
      P,
      callback,
    );
  }

  late final _cv_fisheye_undistortPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat,
              imp1.CvCallback_0)>>('cv_fisheye_undistortPoints');
  late final _cv_fisheye_undistortPoints =
      _cv_fisheye_undistortPointsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_getDefaultNewCameraMatrix(
    Mat cameraMatrix,
    CvSize size,
    bool centerPrincipalPoint,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_getDefaultNewCameraMatrix(
      cameraMatrix,
      size,
      centerPrincipalPoint,
      rval,
      callback,
    );
  }

  late final _cv_getDefaultNewCameraMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvSize,
              ffi.Bool,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_getDefaultNewCameraMatrix');
  late final _cv_getDefaultNewCameraMatrix =
      _cv_getDefaultNewCameraMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, CvSize, bool, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_getOptimalNewCameraMatrix(
    Mat cameraMatrix,
    Mat distCoeffs,
    CvSize size,
    double alpha,
    CvSize newImgSize,
    ffi.Pointer<CvRect> validPixROI,
    bool centerPrincipalPoint,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_getOptimalNewCameraMatrix(
      cameraMatrix,
      distCoeffs,
      size,
      alpha,
      newImgSize,
      validPixROI,
      centerPrincipalPoint,
      rval,
      callback,
    );
  }

  late final _cv_getOptimalNewCameraMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              CvSize,
              ffi.Double,
              CvSize,
              ffi.Pointer<CvRect>,
              ffi.Bool,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_getOptimalNewCameraMatrix');
  late final _cv_getOptimalNewCameraMatrix =
      _cv_getOptimalNewCameraMatrixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              CvSize,
              double,
              CvSize,
              ffi.Pointer<CvRect>,
              bool,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_initUndistortRectifyMap(
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat r,
    Mat newCameraMatrix,
    CvSize size,
    int m1type,
    Mat map1,
    Mat map2,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_initUndistortRectifyMap(
      cameraMatrix,
      distCoeffs,
      r,
      newCameraMatrix,
      size,
      m1type,
      map1,
      map2,
      callback,
    );
  }
